# MiroShark

./: .gitignore  CLAUDE.md  ECOSYSTEM.md  README.md
backend/: openapi.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  gtb.py  sim_dispatcher.py  simulation.py  stats.py  surfaces.py
backend/config/: mcp_servers.yaml.example
backend/scripts/: audit_sweep_experiment.py  building_dominance_experiment.py  compute_basis_experiment.py  compute_basis_kernel_experiment.py  compute_basis_sensitivity_experiment.py  compute_basis_sku_experiment.py  compute_basis_skucorr_experiment.py  compute_dealer_competition_experiment.py  compute_forward_default_experiment.py  compute_funding_ruin_experiment.py  compute_futures_experiment.py  compute_hedge_execution_experiment.py  compute_market_experiment.py  compute_participation_book_experiment.py  external_staker.py  futures_validation_experiment.py  housing_cost_sweep.py  llm_latency_probe.py  llm_planner_experiment.py  llm_x_makers_experiment.py  market_predictiveness_experiment.py  mcp_agent_bridge.py  planner_benchmark_experiment.py  planner_elastic_experiment.py  planner_reactivity_experiment.py  saez_band_experiment.py  sweep_gtb.py  trade_activation_experiment.py  welfare_equity_frontier.py
backend/tests/: test_unit_agent_export.py  test_unit_batch_status.py  test_unit_checkpoint_export.py  test_unit_clone_service.py  test_unit_ecosystem_catalog.py  test_unit_gtb_compute.py  test_unit_gtb_compute_basis.py  test_unit_gtb_compute_basis_kernel.py  test_unit_gtb_compute_basis_sensitivity.py  test_unit_gtb_compute_basis_sku.py  test_unit_gtb_compute_basis_skucorr.py  test_unit_gtb_compute_market.py  test_unit_gtb_dealer_competition.py  test_unit_gtb_enforcement.py  test_unit_gtb_forward_default.py  test_unit_gtb_funding_ruin.py  test_unit_gtb_futures.py  test_unit_gtb_futures_mtm.py  test_unit_gtb_ledger.py  test_unit_gtb_market.py  test_unit_gtb_markets.py  test_unit_gtb_participation_book.py  test_unit_gtb_polymarket.py  test_unit_gtb_risk_aware_dealer.py  test_unit_gtb_service.py  test_unit_gtb_sku_futures.py  test_unit_gtb_step_route.py  test_unit_gtb_sweep.py  test_unit_gtb_utility.py  test_unit_llm_client_parse.py  test_unit_mcp_registry.py  test_unit_openapi.py  test_unit_oracle_seed.py  test_unit_polymarket_service.py  test_unit_project_stats.py  test_unit_run_events.py  test_unit_signal_service.py  test_unit_surface_stats.py  test_unit_surfaces_catalog.py
(+246 files in other folders)
